// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> toMatchSnapshot: no attrs 1`] = `
<img
  alt="Luna"
  className="sc-bdVaJa kOpOcf"
  src="./luna.jpg"
/>
`;

exports[`<Image /> toMatchSnapshot: with attrs 1`] = `
<img
  alt="Luna"
  className="sc-bwzfXH MLNAr"
  src="./luna.jpg"
/>
`;
